// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventListItem should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-191jqm4-MuiTypography-root-MuiLink-root-EventListItem"
    href="https://gigantic-tolerance.name"
  >
    <article
      class="css-2y38b5 ezogaq70"
    >
      <div
        class="css-0 ezogaq74"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1a2v9hb e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-yr5cju ezogaq71"
      >
        <div
          class="css-17musyg ezogaq72"
        >
          <div
            class="css-12bfk4x ezogaq73"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <span>
              26.01.2022 23:13
            </span>
          </div>
          – 
          <span>
            12.05.2022 01:36
          </span>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          Electronic Rubber Gloves
        </h1>
        <div
          class="css-0 e1e9qmuq0"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Libero a odit sequi quos.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quo qui porro voluptas optio aut voluptates quis.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ex excepturi nihil nesciunt mollitia rerum repellat a.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Officiis ex asperiores ipsa possimus aperiam corrupti.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Blanditiis dignissimos quae temporibus ea expedita rerum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Recusandae voluptatem quos nemo veniam libero.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Molestiae a nostrum ipsum officia saepe sunt voluptatum.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Eligendi cum rem explicabo.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam ipsam unde inventore architecto voluptatum maxime.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Minus id dignissimos similique aliquid ipsam accusantium.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Dolores commodi ratione iusto architecto maiores.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illum animi fuga qui accusantium quod eaque.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Veritatis quas facere similique voluptates fuga expedita.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Accusantium quisquam voluptatum fugiat.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Libero id quidem odit nihil.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat voluptate id maiores veniam atque totam fuga nisi.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Voluptatem corrupti sint magni illum odio a rerum fuga autem.
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
    </article>
  </a>
</DocumentFragment>
`;

exports[`EventListItem should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-191jqm4-MuiTypography-root-MuiLink-root-EventListItem"
    href="https://gigantic-tolerance.name"
  >
    <article
      class="extra-classname css-2y38b5 ezogaq70"
    >
      <div
        class="css-0 ezogaq74"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1a2v9hb e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-yr5cju ezogaq71"
      >
        <div
          class="css-17musyg ezogaq72"
        >
          <div
            class="css-12bfk4x ezogaq73"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <span>
              26.01.2022 23:13
            </span>
          </div>
          – 
          <span>
            12.05.2022 01:36
          </span>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          Electronic Rubber Gloves
        </h1>
        <div
          class="css-0 e1e9qmuq0"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Libero a odit sequi quos.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quo qui porro voluptas optio aut voluptates quis.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ex excepturi nihil nesciunt mollitia rerum repellat a.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Officiis ex asperiores ipsa possimus aperiam corrupti.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Blanditiis dignissimos quae temporibus ea expedita rerum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Recusandae voluptatem quos nemo veniam libero.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Molestiae a nostrum ipsum officia saepe sunt voluptatum.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Eligendi cum rem explicabo.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam ipsam unde inventore architecto voluptatum maxime.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Minus id dignissimos similique aliquid ipsam accusantium.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Dolores commodi ratione iusto architecto maiores.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illum animi fuga qui accusantium quod eaque.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Veritatis quas facere similique voluptates fuga expedita.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Accusantium quisquam voluptatum fugiat.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Libero id quidem odit nihil.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat voluptate id maiores veniam atque totam fuga nisi.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Voluptatem corrupti sint magni illum odio a rerum fuga autem.
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
    </article>
  </a>
</DocumentFragment>
`;

exports[`EventListItem should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-191jqm4-MuiTypography-root-MuiLink-root-EventListItem"
    href="https://gigantic-tolerance.name"
  >
    <article
      class="css-2y38b5 ezogaq70"
    >
      <div
        class="css-0 ezogaq74"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1a2v9hb e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-yr5cju ezogaq71"
      >
        <div
          class="css-17musyg ezogaq72"
        >
          <div
            class="css-12bfk4x ezogaq73"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <span>
              26.01.2022 23:13
            </span>
          </div>
          – 
          <span>
            12.05.2022 01:36
          </span>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          Electronic Rubber Gloves
        </h1>
        <div
          class="css-0 e1e9qmuq0"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Libero a odit sequi quos.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quo qui porro voluptas optio aut voluptates quis.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ex excepturi nihil nesciunt mollitia rerum repellat a.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Officiis ex asperiores ipsa possimus aperiam corrupti.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Blanditiis dignissimos quae temporibus ea expedita rerum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Recusandae voluptatem quos nemo veniam libero.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Molestiae a nostrum ipsum officia saepe sunt voluptatum.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Eligendi cum rem explicabo.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam ipsam unde inventore architecto voluptatum maxime.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Minus id dignissimos similique aliquid ipsam accusantium.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Dolores commodi ratione iusto architecto maiores.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illum animi fuga qui accusantium quod eaque.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Veritatis quas facere similique voluptates fuga expedita.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Accusantium quisquam voluptatum fugiat.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Libero id quidem odit nihil.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat voluptate id maiores veniam atque totam fuga nisi.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Voluptatem corrupti sint magni illum odio a rerum fuga autem.
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
    </article>
  </a>
</DocumentFragment>
`;

exports[`EventListItem should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-191jqm4-MuiTypography-root-MuiLink-root-EventListItem"
    href="https://gigantic-tolerance.name"
  >
    <article
      class="css-2y38b5 ezogaq70"
    >
      <div
        class="css-0 ezogaq74"
      />
      <div
        class="css-yr5cju ezogaq71"
      >
        <div
          class="css-17musyg ezogaq72"
        >
          <div
            class="css-12bfk4x ezogaq73"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <span>
              26.01.2022 23:13
            </span>
          </div>
          – 
          <span>
            12.05.2022 01:36
          </span>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          Electronic Rubber Gloves
        </h1>
        <div
          class="css-0 e1e9qmuq0"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Libero a odit sequi quos.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quo qui porro voluptas optio aut voluptates quis.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ex excepturi nihil nesciunt mollitia rerum repellat a.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Officiis ex asperiores ipsa possimus aperiam corrupti.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Blanditiis dignissimos quae temporibus ea expedita rerum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Recusandae voluptatem quos nemo veniam libero.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Molestiae a nostrum ipsum officia saepe sunt voluptatum.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Eligendi cum rem explicabo.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam ipsam unde inventore architecto voluptatum maxime.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Minus id dignissimos similique aliquid ipsam accusantium.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Dolores commodi ratione iusto architecto maiores.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Illum animi fuga qui accusantium quod eaque.
                  </span>
                </strong>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Veritatis quas facere similique voluptates fuga expedita.
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Accusantium quisquam voluptatum fugiat.
                  </span>
                </u>
              </span>
              <span
                data-slate-node="text"
              >
                <del
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Libero id quidem odit nihil.
                  </span>
                </del>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Fugiat voluptate id maiores veniam atque totam fuga nisi.
                </span>
              </span>
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Voluptatem corrupti sint magni illum odio a rerum fuga autem.
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
    </article>
  </a>
</DocumentFragment>
`;
